# weaveheap

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/weaveheap-capi/: Cargo.toml
crates/weaveheap-capi/include/: weaveheap.h
crates/weaveheap-capi/src/: lib.rs
crates/weaveheap-cli/: Cargo.toml
crates/weaveheap-cli/src/: main.rs
crates/weaveheap-core/: Cargo.toml
crates/weaveheap-core/src/: errors.rs  handles.rs  lib.rs  region.rs  stats.rs
crates/weaveheap-node/: Cargo.toml
crates/weaveheap-node/src/: lib.rs
crates/weaveheap-python/: Cargo.toml  build.rs  pyproject.toml
crates/weaveheap-python/src/: lib.rs
crates/weaveheap-wasm/: Cargo.toml
crates/weaveheap-wasm/js/: glue.js
crates/weaveheap-wasm/src/: lib.rs
crates/weaveheap-wasm/wit/: weaveheap.wit
docs/: roadmap.md
samples/node/: README.md  index.mjs  package.json
samples/python/: README.md  main.py
samples/rust/: Cargo.toml
samples/rust/src/: main.rs
samples/wasm/: index.html
