[package]
name = "weaveheap-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
weaveheap-core = { path = "../weaveheap-core" }
weaveheap-capi = { path = "../weaveheap-capi" }

[[bin]]
name = "weaveheap"
path = "src/main.rs"
